[package]
name = "option-symbology"
version = "0.1.3"
description = "Parsing of Options identifiers and formatting them."
license = "MIT"
authors = ["Tobias Breitwieser <tobias@breitwieser.biz>"]
repository = "https://github.com/tarfu/option-symbology"
exclude = [".gitignore", ".github"]
readme = "README.md"
keywords = ["osi", "options", "schwab", "occ", "oci"]
edition = "2018"
documentation = "https://docs.rs/option-symbology"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.6.0"
strum = "0.21.0"
strum_macros = "0.21"

